[220922] 박스오피스 api 화면 구현/상영중영화 화면 구현

--- a/src/main/webapp/resources/static/css/xdmin/style.css
+++ b/src/main/webapp/resources/static/css/xdmin/style.css
@@ -4,6 +4,12 @@
 		font-family: 'Noto Sans KR', sans-serif;
 }
 
+.text-input {
+	width : 250px;
+	margin-right: 10px;
+	margin-top: 10px;
+}
+
 .modal {
 	font-family: 'Noto Sans KR', sans-serif;
 }
