220929 상영시간표 작업즁

--- a/src/main/webapp/resources/static/css/xdmin/style.css
+++ b/src/main/webapp/resources/static/css/xdmin/style.css
@@ -4,6 +4,12 @@
 		font-family: 'Noto Sans KR', sans-serif;
 }
 
+a {
+	text-decoration-line: none;
+	 color: black;
+	
+}
+
 .text-input {
 	width : 250px;
 	margin-right: 10px;
