--- a/src/main/webapp/resources/static/css/style.css
+++ b/src/main/webapp/resources/static/css/style.css
@@ -506,7 +506,7 @@ ul {
     background-color: #fff ;
     border-radius: 8px;
     z-index: 10;
-    box-shadow: 10px 10px 10px rgb(0 0 0 / 20%);
+    box-shadow: 10px 10px 10px rgb(0 0 0 / 3%);
 }
 
 .theater-detail-page .theater-all .theater-area-list .area-depth2 ul li {
@@ -705,7 +705,97 @@ ul {
     text-align: center;
 }
 
-		
+.movie-list-util .no-result-count {
+    float: left;
+    margin: 0 0 0 20px;
+    padding: 1px 0 0 0;
+    color: #222;
+    line-height: 34px;
+}
+
+.movie-list-util .movie-search {
+    position: relative;
+    float: right;
+    width: 230px;
+    height: 36px;
+    margin: 0;
+    padding: 0 31px 0 0;
+    border: 1px solid #d8d9db;
+    border-radius: 3px;
+}
+
+.movie-list-util .movie-search .input-text {
+    display: block;
+    width: 100%;
+    height: 34px;
+    border: 0;
+}
+
+.movie-list-util .movie-search .btn-search-input {
+    position: absolute;
+    right: 1px;
+    top: 1px;
+}
+
+.movie-list-util .movie-sorting {
+    float: left;
+    padding: 5px 0 0 0;
+}
+
+.movie-list-util .movie-sorting span:first-child {
+    margin-left: 0;
+}
+
+.movie-list-util .movie-sorting span .btn.on {
+    color: #222;
+    font-weight: 700;
+}
+
+.movie-list-util .movie-sorting span {
+    display: block;
+    position: relative;
+    float: left;
+    margin: 0 10px;
+}
+
+.movie-list-util .movie-sorting span .btn {
+    display: block;
+    color: #666;
+}
+
+.movie-list-util .movie-sorting span:before {
+    content: '';
+    position: absolute;
+    left: -10px;
+    top: 50%;
+    display: block;
+    width: 1px;
+    height: 12px;
+    margin: -6px 0 0 0;
+    background-color: #d8d9db;
+}
+
+.movie-list-util {
+    overflow: hidden;
+    margin-bottom: 15px;
+}
+
+.movie-list-util button {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    background-color: transparent;
+}
+
+.movie-list-util .movie-search .btn-search-input {
+    position: absolute;
+    right: 1px;
+    top: 1px;
+}
+	
+.fa-magnifying-glass {
+	margin-top: 8px;
+}	
 
 /* modal */
 
