--- a/src/main/webapp/resources/static/css/style.css
+++ b/src/main/webapp/resources/static/css/style.css
@@ -825,7 +825,7 @@ ul {
 }
 	
 .fa-magnifying-glass {
-	margin-top: 8px;
+	margin : 8px 10px 0 0;
 }	
 
 /* modal */
@@ -840,6 +840,21 @@ ul {
 	background-color: #F8F8FA;
 	
 }
+
+.movie-list-no-result {
+    padding: 50px 0 0 0;
+    color: #222;
+    text-align: center;
+    font-size: 1.3333em;
+}
+
+.movie-list-no-result p {
+    margin: 0;
+    padding: 50px 0;
+    border: 1px solid #f5f5f5;
+    border-width: 1px 0 1px 0;
+}
+
 
 /* datepicker */
 /* .ui-widget-header { border: 0px solid #dddddd; background: #fff; } 
