--- a/src/main/webapp/resources/static/css/main.css
+++ b/src/main/webapp/resources/static/css/main.css
@@ -404,3 +404,62 @@ ul {
 	color : white;
 }
 
+/* footer */
+#footer {
+    position: relative;
+    min-width: 1100px;
+    width: 100%;
+    height: 200px;
+    margin : 0;
+    padding: 0;
+    background-color: #f8f8fa;
+}
+
+#footer .footer-bottom {
+    overflow: hidden;
+    width: 1100px;
+    margin: 0 auto;
+    padding-top: 50px;
+}
+
+.inner-wrap {
+    width: 1100px;
+    margin: 0 auto;
+}
+
+#footer .footer-bottom .ci {
+    overflow: hidden;
+    display: block;
+    float: left;
+    width: 150px;
+    height: 50px;
+    margin: 0 20px 0 0;
+    padding: 0;
+    text-indent: -9999px;
+    background: url(https://img.megabox.co.kr/static/pc/images/common/ci/logo-opacity_new2.png) no-repeat center;
+}
+
+#footer .footer-bottom .footer-info {
+    float: left;
+    font-size: .8667em;
+    letter-spacing: 0;
+}
+
+#footer .footer-bottom .footer-info address {
+    display: inline-block;
+    vertical-align: top;
+    color : black;
+}
+
+#footer .footer-bottom .footer-info p {
+    display: inline-block;
+    vertical-align: top;
+    color : black;
+}
+
+#footer .footer-bottom .footer-info p.copy {
+    display: block;
+}
+
+/* //footer */
+
