--- a/src/main/webapp/resources/static/css/style.css
+++ b/src/main/webapp/resources/static/css/style.css
@@ -798,6 +798,19 @@ ul {
     top: 1px;
 }
 
+.movie-list ul:after, .movie-list ul:before {
+    content: '';
+    display: table;
+}
+
+.movie-list ul:after {
+    clear: both;
+}
+
+.btn-more {
+    padding: 40px 0 0 0;
+}
+
 .btn-more.v1 .btn {
     border: 1px solid #eaeaea;
 }
@@ -835,12 +848,6 @@ ul {
 	font-size: 13px;
 }
 
-.footer-area {
-	height: 50px;
-	background-color: #F8F8FA;
-	
-}
-
 .movie-list-no-result {
     padding: 50px 0 0 0;
     color: #222;
@@ -855,78 +862,54 @@ ul {
     border-width: 1px 0 1px 0;
 }
 
+/* footer */
+#footer {
+    min-width: 1100px;
+    width: 100%;
+    height: 200px;
+    margin-top: 20px;
+    padding: 0;
+    background-color: #f8f8fa;
+}
 
-/* datepicker */
-/* .ui-widget-header { border: 0px solid #dddddd; background: #fff; } 
+#footer .footer-bottom {
+    overflow: hidden;
+    width: 1100px;
+    margin: 0 auto;
+    padding-top: 50px;
+}
 
-.ui-datepicker-calendar>thead>tr>th { font-size: 14px !important; } 
+#footer .footer-bottom .ci {
+    overflow: hidden;
+    display: block;
+    float: left;
+    width: 150px;
+    height: 50px;
+    margin: 0 20px 0 0;
+    padding: 0;
+    text-indent: -9999px;
+    background: url(https://img.megabox.co.kr/static/pc/images/common/ci/logo-opacity_new2.png) no-repeat center;
+}
 
-.ui-datepicker .ui-datepicker-header { position: relative; padding: 10px 0; } 
+#footer .footer-bottom .footer-info {
+    float: left;
+    font-size: .8667em;
+    letter-spacing: 0;
+}
 
-.ui-state-default,
-.ui-widget-content .ui-state-default,
-.ui-widget-header .ui-state-default,
-.ui-button,
-html .ui-button.ui-state-disabled:hover,
-html .ui-button.ui-state-disabled:active { border: 0px solid #c5c5c5; background-color: transparent; font-weight: normal; color: #454545; text-align: center; } 
+#footer .footer-bottom .footer-info address {
+    display: inline-block;
+    vertical-align: top;
+}
 
-.ui-datepicker .ui-datepicker-title { margin: 0 0em; line-height: 16px; text-align: center; font-size: 14px; padding: 0px; font-weight: bold; } 
+#footer .footer-bottom .footer-info p {
+    display: inline-block;
+    vertical-align: top;
+}
 
-.ui-datepicker { display: none; background-color: #fff; border-radius: 4px; margin-top: 10px; margin-left: 0px; margin-right: 0px; padding: 20px; padding-bottom: 10px; width: 300px; } 
+#footer .footer-bottom .footer-info p.copy {
+    display: block;
+}
 
-.ui-widget.ui-widget-content { width: auto; border: 0px; } 
 
-#datepicker:focus>.ui-datepicker { display: block; } 
-
-.ui-datepicker-prev,
-.ui-datepicker-next { cursor: pointer; } 
-
-.ui-datepicker-next { float: right; } 
-
-.ui-state-disabled { cursor: auto; color: hsla(0, 0%, 80%, 1); } 
-
-.ui-datepicker-title { text-align: center; padding: 10px; font-weight: 100; font-size: 20px; } 
-
-.ui-datepicker-calendar { width: 100%; } 
-
-.ui-datepicker-calendar>thead>tr>th { padding: 5px; font-size: 20px; font-weight: 400; } 
-
-.ui-datepicker-calendar>tbody>tr>td>a { color: #000; font-size: 12px !important; font-weight: bold !important; text-decoration: none;}
-
-.ui-datepicker-calendar>tbody>tr>.ui-state-disabled:hover { cursor: auto; background-color: #fff; } 
-
-.ui-datepicker-calendar>tbody>tr>td { border-radius: 100%; width: 44px; height: 30px; cursor: pointer; padding: 5px; font-weight: 100; text-align: center; font-size: 12px; } 
-
-.ui-datepicker-calendar>tbody>tr>td:hover { background-color: transparent; opacity: 0.6; } 
-
-.ui-state-hover,
-.ui-widget-content .ui-state-hover,
-.ui-widget-header .ui-state-hover,
-.ui-state-focus,
-.ui-widget-content .ui-state-focus,
-.ui-widget-header .ui-state-focus,
-.ui-button:hover,
-.ui-button:focus { border: 0px solid #cccccc; background-color: transparent; font-weight: normal; color: #2b2b2b; } 
-
-.ui-widget-header .ui-icon { background-image: url('/resources/static/image/btns.png'); } 
-
-.ui-icon-circle-triangle-e { background-position: -20px 0px; background-size: 36px; } 
-
-.ui-icon-circle-triangle-w { background-position: -0px -0px; background-size: 36px; } 
-
-.ui-datepicker-calendar>tbody>tr>td:first-child a { color: red !important; } 
-
-.ui-datepicker-calendar>tbody>tr>td:last-child a { color: #0099ff !important; } 
-
-.ui-datepicker-calendar>thead>tr>th:first-child { color: red !important; } 
-
-.ui-datepicker-calendar>thead>tr>th:last-child { color: #0099ff !important; } 
-
-.ui-state-highlight,
-.ui-widget-content .ui-state-highlight,
-.ui-widget-header .ui-state-highlight { border: 0px; background: #f1f1f1; border-radius: 50%; padding-top: 10px; padding-bottom: 10px; } 
-
-.inp { padding: 10px 10px; background-color: #f1f1f1; border-radius: 4px; border: 0px; } 
-
-.inp:focus { outline: none; background-color: #eee; } */
-
+/* //footer */
