--- a/src/main/webapp/resources/static/css/style.css
+++ b/src/main/webapp/resources/static/css/style.css
@@ -862,6 +862,17 @@ ul {
     border-width: 1px 0 1px 0;
 }
 
+/* 마이페이지 */
+.inner-wrap:after, .inner-wrap:before {
+    content: '';
+    display: table;
+}
+
+.inner-wrap:after {
+    clear: both;
+}
+
+
 /* footer */
 #footer {
     min-width: 1100px;
