--- a/src/main/webapp/resources/static/css/xdmin/chat.css
+++ b/src/main/webapp/resources/static/css/xdmin/chat.css
@@ -10,36 +10,32 @@
 div	{
 	/* border: solid 1px orange; */
 }
-
 .card {
-    height: 500px;
+    height: 700px;
     border-radius: 15px !important;
-    /* background-color: rgba(0, 0, 0, 0.4) !important; */
-    width: 800px;
+    background-color: white !important;
+    border: 1px solid #dee2e6;
+    box-shadow: 2px 2px 1px #e8eaeb;
 }
 
 .contacts_body {
     padding: 0.75rem 0 !important;
     overflow-y: auto;
     white-space: nowrap;
-    background: #1F2122;
 }
 
 .msg_card_body {
     overflow-y: auto;
-    background: white;
 }
 
 .card-header {
     border-radius: 15px 15px 0 0 !important;
     border-bottom: 0 !important;
-    background: #1F2122;
 }
 
 .card-footer {
     border-radius: 0 0 15px 15px !important;
     border-top: 0 !important;
-    background: white;
 }
 
 .container {
@@ -59,9 +55,8 @@ div	{
 }
 
 .type_msg {
-    background-color: rgba(0, 0, 0, 0.3) !important;
+    background-color: white !important;
     border: 0 !important;
-    color: white !important;
     height: 60px !important;
     overflow-y: auto;
 }
@@ -73,17 +68,15 @@ div	{
 
 .attach_btn {
     border-radius: 15px 0 0 15px !important;
-    background-color: #BEB4AF !important;
+    background-color: white !important;
     border: 0 !important;
-    color: white !important;
     cursor: pointer;
 }
 
 .send_btn {
     border-radius: 0 15px 15px 0 !important;
-    background-color: #BEB4AF !important;
+    background-color: white !important;
     border: 0 !important;
-    color: white !important;
     cursor: pointer;
 }
 
@@ -147,14 +140,14 @@ div	{
 
 .chat_product_info .status {
     font-size: 12px;
-    color: white;
+    color: black;
     font-weight: bold;
     margin-right: 5px;
 }
 
 .chat_product_info p {
     font-size: 12px;
-    color: rgba(255, 255, 255, 0.6);
+    color: rgba(0, 0, 0, 0.6);
 }
 
 .msg_cotainer {
@@ -205,10 +198,6 @@ div	{
     background: #1F2122;
 }
 
-#chatMessage {
-	background-color: #BEB4AF !important;
-	border : 0px;
-}
 /* width */
 
 ::-webkit-scrollbar {
